manifests/04-guacd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: guacamole
  labels:
    app: guacamole-guacd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:1.6.0
          ports:
            - containerPort: 4822
              name: guacd-port

---
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: guacamole
  labels:
    app: guacamole-guacd
spec:
  ports:
    - port: 4822
      targetPort: 4822
      protocol: TCP
      name: guacd-port
  selector:
    app: guacd
  type: ClusterIP
