manifests/05-guacamole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-client
  namespace: guacamole
  labels:
    app: guacamole-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole-client
  template:
    metadata:
      labels:
        app: guacamole-client
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacamole:1.6.0
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app: guacamole-client
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: guacamole-client
  type: ClusterIP
